# VRX-Learn

./: .gitignore  configs.py  database.py  exceptions.py  main.py  pyproject.toml  schemas.py  utils.py
data_access_layer/: course_reports.py  courses.py  enrollments.py  modules.py  resources.py  users.py
presentation_layer/: auth.py  course_report_routes.py  course_routes.py  enrollment_routes.py  media_routes.py  module_routes.py  resource_routes.py  user_routes.py  video_stream_routes.py
service_layer/: auth.py  course_reports.py  courses.py  enrollments.py  modules.py  resources.py  users.py
